Fixing issue with header on mobile

--- a/src/css/template.css
+++ b/src/css/template.css
@@ -31,13 +31,6 @@
   }
 }
 
-img.logo {
-  width: 30px;
-  margin: 0 20px 0 0;
-  position: relative;
-  display: inline-block;
-  top: 6px;
-}
 h1 {
   margin: 10px 0 10px 0;
 }
